Created methods which uses StreamAPI